# modoh-server

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  cdn_ips.txt  doh-auth-relay.toml  get_cdn_ips.sh  modoh-server.toml
.github/: dependabot.yml
.github/workflows/: release_docker.yml  test.yml
dar-bin/: Cargo.toml
dar-bin/src/config/: mod.rs  target_config.rs  toml.rs
dar-lib/: Cargo.toml
dar-lib/src/: constants.rs  error.rs  globals.rs  lib.rs
dar-lib/src/auth/: auth_main.rs  jwks_service.rs  jwt.rs  mod.rs  validation_key.rs
dar-lib/src/relay/: authenticator.rs  forwarder.rs  forwarder_handle_url.rs  mod.rs  relay_main.rs  socket.rs
docker/: Dockerfile  Dockerfile-slim  README.md  docker-compose.yml  entrypoint.sh  run.sh
docker-otel/: .env.example  README.md  docker-compose.yml  mimir.yml  otel-config.yml  prometheus.yml
httpsig-registry/: Cargo.toml
httpsig-registry/registry-sample/: httpsig-endpoints.md  httpsig-endpoints.md.minisig
httpsig-registry/src/: constants.rs  error.rs  lib.rs  parse_md.rs
httpsig-wire-proto/: Cargo.toml
httpsig-wire-proto/src/: common.rs  dh.rs  error.rs  lib.rs  mac_kdf.rs  pk.rs
modoh-bin/: Cargo.toml
modoh-bin/src/: constants.rs  log.rs  main.rs  otel.rs  trace.rs
modoh-bin/src/config/: parse.rs  target_config.rs  toml.rs
modoh-httpsig/: Cargo.toml
modoh-httpsig/src/: dh.rs  error.rs  lib.rs  mac_kdf.rs  pk.rs
modoh-lib/: Cargo.toml
modoh-lib/src/: constants.rs  count.rs  dns.rs  error.rs  evil_trace.rs  globals.rs  hyper_client.rs  lib.rs  message_util.rs  metrics.rs  trace.rs
modoh-lib/src/httpsig/: common.rs  dh.rs  error.rs  httpsig_configs.rs  mod.rs
modoh-lib/src/httpsig_handler/: handler.rs  handler_main.rs  handler_service.rs  keymap.rs  mod.rs  rotation_state.rs  target_domains.rs
modoh-lib/src/httpsig_state/: handler.rs  mod.rs
modoh-lib/src/relay/: relay_handle_url.rs  relay_main.rs
modoh-lib/src/request_filter/: domain_filter.rs  ip_filter.rs  mod.rs
modoh-lib/src/router/: router_main.rs  router_serve_req.rs  socket.rs
modoh-lib/src/validator/: mod.rs  validator_jwks_service.rs  validator_main.rs
relay-bin/: Cargo.toml
relay-bin/src/: main.rs
relay-bin/src/config/: target_config.rs  toml.rs
relay-lib/: Cargo.toml
relay-lib/src/: constants.rs  error.rs  globals.rs  http_client.rs  hyper_body.rs  lib.rs  message_util.rs
relay-lib/src/auth/: auth_main.rs  jwks_service.rs  mod.rs  validation_key.rs
relay-lib/src/relay/: forwarder.rs  forwarder_handle_url.rs  mod.rs  relay_main.rs  validator.rs
relay-lib/src/router/: mod.rs  router_main.rs  router_serve_req.rs
relay-lib/src/validation/: jwks_service.rs  mod.rs  validation_main.rs
relay-lib/src/validator/: mod.rs  validator_jwks_service.rs  validator_main.rs
