[package]
name = "doh-auth-relay"
version = "0.1.0"
description = "Relay for (Mutualized) Oblivious DNS over HTTPS with Authorization"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/doh-auth-relay"
repository = "https://github.com/junkurihara/doh-auth-relay"
license = "MIT"
readme = "../README.md"
categories = [
  "asynchronous",
  "network-programming",
  "command-line-utilities",
  "web-programming::http-server",
]
keywords = [
  "dns",
  "https",
  "dns-over-https",
  "doh",
  "oblivious-dns-over-https",
  "odoh",
  "mutualized-oblivious-dns",
  "mutualized-odoh",
  "modoh",
  "relay",
  "authorization",
]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doh-auth-relay-lib = { path = "../dar-lib" }

anyhow = "1.0.75"
mimalloc = { version = "*", default-features = false }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
derive_builder = "0.12.0"
tokio = { version = "1.34.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.74"

# config
clap = { version = "4.4.8", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
hot_reload = "0.1.4"

# logging
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
