[package]
name = "doh-auth-relay-lib"
version = "0.1.0"
description = "Relay libraly for (Mutualized) Oblivious DNS over HTTPS with Authorization"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/doh-auth-relay"
repository = "https://github.com/junkurihara/doh-auth-relay"
license = "MIT"
readme = "../README.md"
categories = [
  "asynchronous",
  "network-programming",
  "command-line-utilities",
  "web-programming::http-server",
]
keywords = [
  "dns",
  "https",
  "dns-over-https",
  "doh",
  "oblivious-dns-over-https",
  "odoh",
  "mutualized-oblivious-dns",
  "mutualized-odoh",
  "modoh",
  "relay",
  "authorization",
]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
anyhow = "1.0.75"
tracing = "0.1.40"
thiserror = "1.0.50"

# http handling
url = "2.4.1"

# authentication of id token
jwt-simple = "0.11.9"
spki = { version = "0.7.2", default-features = false, features = [
  "pem",
  "alloc",
] }
