[package]
name = "httpsig-registry"
description = "Handler for endpoints that serves wire-formatted HTTPSig public keys"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { version = "1.0.81" }
thiserror = { version = "1.0.58" }
pulldown-cmark = { version = "0.10.0", default-features = false }
http = { version = "1.1.0" }
indexmap = { version = "2.2.5" }
minisign-verify = { version = "0.2.1" }
