[package]
name = "httpsig-registry"
description = "Handler for endpoints that serves wire-formatted HTTPSig public keys"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.63" }
pulldown-cmark = { version = "0.11.0", default-features = false }
http = { version = "1.1.0" }
indexmap = { version = "2.2.6" }
minisign-verify = { version = "0.2.1" }
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls",
  "http2",
  "hickory-dns",
] }
futures = { version = "0.3.30", default-features = false, features = [
  "std",
  "async-await",
] }
tokio = { version = "1.38.1", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
