[package]
name = "httpsig-proto"
description = "Wire format and protocol definition for HTTP message signature in (Mutualized) Oblivious DNS over HTTPS with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.80"
thiserror = "1.0.57"
rand = "0.8.5"
hpke = "0.11.0"
bytes = "1.5.0"
byteorder = "1.5.0"
p256 = { version = "0.13.2" }
elliptic-curve = { version = "0.13.8", features = ["ecdh"] }
ed25519-compact = { version = "2.1.1" }
digest = "0.10.7"
sha2 = "0.10.8"
hkdf = "0.12.4"
httpsig = "0.0.9"
