[package]
name = "modoh-server"
description = "Relay and target for (Mutualized) Oblivious DNS over HTTPS with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["otel-full", "otel-evil-trace"]
otel-full = ["otel-trace", "otel-metrics", "otel-instance-id"]
otel-trace = [
  "opentelemetry/trace",
  "opentelemetry_sdk/trace",
  "opentelemetry-stdout/trace",
  "opentelemetry-otlp/trace",
  "dep:tracing-opentelemetry",
  "otel-base",
]
otel-metrics = [
  "modoh-server-lib/metrics",
  "opentelemetry/metrics",
  "opentelemetry_sdk/metrics",
  "opentelemetry-stdout/metrics",
  "opentelemetry-otlp/metrics",
  "otel-base",
]
otel-base = [
  "opentelemetry_sdk/rt-tokio",
  "dep:opentelemetry-semantic-conventions",
]
otel-instance-id = ["dep:uuid"]

# DO NOT USE THIS IN PRODUCTION
otel-evil-trace = ["modoh-server-lib/evil-trace", "otel-trace"]

[dependencies]
modoh-server-lib = { path = "../modoh-lib", default-features = false, features = [
  "rustls",
] }

anyhow = "1.0.82"
mimalloc = { version = "*", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
derive_builder = "0.20.0"
tokio = { version = "1.37.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.80"
url = "2.5.0"

# config
clap = { version = "4.5.4", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
hot_reload = "0.1.5"

# tracing and metrics
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.23.0", optional = true }
opentelemetry = { version = "0.22.0", optional = true }
opentelemetry_sdk = { version = "0.22.1", features = [
  "rt-tokio",
], optional = true }
opentelemetry-stdout = { version = "0.3.0", optional = true }
opentelemetry-otlp = { version = "0.15.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.14.0", optional = true }

# add random otel service id whenever restarting
uuid = { version = "1.8.0", default-features = false, features = [
  "v4",
  "fast-rng",
], optional = true }

# ip address
ipnet = { version = "2.9.0" }
