[package]
name = "modoh-server-httpsig"
description = "HTTP message signature library of relay and target server for (Mutualized) Oblivious DNS over HTTPS with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.80"
thiserror = "1.0.57"
rand = "0.8.5"

# httpsig
hpke = "0.11.0"
bytes = "1.5.0"
httpsig = "0.0.5"
p256 = { version = "0.13.2" }
elliptic-curve = { version = "0.13.8", features = ["ecdh"] }
