[package]
name = "modoh-server-lib"
description = "Relay and target libraly for (Mutualized) Oblivious DNS over HTTPS with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
metrics = ["opentelemetry_sdk/metrics", "opentelemetry/metrics"]
evil-trace = [
  "dep:tracing-opentelemetry",
  "opentelemetry_sdk/trace",
  "opentelemetry/trace",
]
native-tls = ["dep:hyper-tls"]
rustls = ["dep:hyper-rustls"]
rustls-webpki-roots = ["rustls", "hyper-rustls/webpki-tokio"]

[dependencies]
futures = { version = "0.3.30", default-features = false, features = [
  "std",
  "async-await",
] }
tokio = { version = "1.36.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
anyhow = "1.0.80"
tracing = "0.1.40"
thiserror = "1.0.57"
async-trait = "0.1.77"

# http handling for both client and server
url = "2.5.0"
rustc-hash = "1.1.0"
hyper = { version = "1.1.0", default-features = false }
http = "1.0.0"
http-body-util = "0.1.0"
hyper-util = { version = "0.1.3", features = ["full"] }

# http handling for client
hyper-tls = { version = "0.6.0", features = [
  "alpn",
  "vendored",
], optional = true }
hyper-rustls = { version = "0.26.0", default-features = false, features = [
  "native-tokio",
  "ring",
  "http1",
  "http2",
], optional = true }

# modoh target handling
odoh-rs = { git = "https://github.com/junkurihara/odoh-rs" }
rand = "0.8.5"
base64 = "0.21.7"
byteorder = "1.5.0"

# validation of id token
serde = { version = "1.0.196", default-features = false }
auth-validator = { git = "https://github.com/junkurihara/rust-token-server", package = "rust-token-server-validator", branch = "develop" }
serde_json = { version = "1.0.113" }

# access control
ipnet = { version = "2.9.0" }
cedarwood = { version = "0.4.6" }
regex = { version = "1.10.3" }

# metrics
opentelemetry = { version = "0.21.0", optional = true }
opentelemetry_sdk = { version = "0.21.2", features = [
  "rt-tokio",
], optional = true }

# tracing requests traveled among relays and targets
# NOTE: DO NOT USE THIS IN PRODUCTION
tracing-opentelemetry = { version = "0.22.0", optional = true }

# httpsig
hpke = "0.11.0"
bytes = "1.5.0"
httpsig = "0.0.5"
p256 = {version = "0.13.2"}
elliptic-curve = { version = "0.13.8", features = ["ecdh"] }
