[package]
name = "modoh-server-lib"
description = "Relay and target libraly for (Mutualized) Oblivious DNS over HTTPS with Authorization"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
metrics = ["opentelemetry_sdk/metrics", "opentelemetry/metrics"]
evil-trace = [
  "dep:tracing-opentelemetry",
  "opentelemetry_sdk/trace",
  "opentelemetry/trace",
]
native-tls = ["dep:hyper-tls"]
rustls = ["dep:hyper-rustls"]
rustls-webpki-roots = ["rustls", "hyper-rustls/webpki-tokio"]
qrlog = ["crossbeam-channel"]

[dependencies]
futures = { version = "0.3.30", default-features = false, features = [
  "std",
  "async-await",
] }
tokio = { version = "1.37.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
anyhow = "1.0.83"
tracing = "0.1.40"
thiserror = "1.0.60"
async-trait = "0.1.80"

# http handling for both client and server
url = "2.5.0"
rustc-hash = "1.1.0"
hyper = { version = "1.3.1", default-features = false }
http = "1.1.0"
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["full"] }

# http handling for client
hyper-tls = { version = "0.6.0", features = [
  "alpn",
  "vendored",
], optional = true }
hyper-rustls = { version = "0.27.1", default-features = false, features = [
  "native-tokio",
  "ring",
  "http1",
  "http2",
], optional = true }

# modoh target handling
odoh-rs = { git = "https://github.com/junkurihara/odoh-rs" }
rand = "0.8.5"
base64 = "0.22.1"
byteorder = "1.5.0"

# validation of id token
serde = { version = "1.0.202", default-features = false }
auth-validator = { git = "https://github.com/junkurihara/rust-token-server", package = "rust-token-server-validator", branch = "develop" }
serde_json = { version = "1.0.117" }

# access control
ipnet = { version = "2.9.0" }
cedarwood = { version = "0.4.6" }
regex = { version = "1.10.4" }

# metrics
opentelemetry = { version = "0.22.0", optional = true }
opentelemetry_sdk = { version = "0.22.1", features = [
  "rt-tokio",
], optional = true }

# tracing requests traveled among relays and targets
# NOTE: DO NOT USE THIS IN PRODUCTION
tracing-opentelemetry = { version = "0.23.0", optional = true }

# httpsig
httpsig-proto = { path = "../httpsig-wire-proto", default-features = false, package = "httpsig-proto" }
httpsig-registry = { path = "../httpsig-registry", default-features = false, package = "httpsig-registry" }
indexmap = { version = "2.2.6" }
httpsig = { version = "0.0.15" }
httpsig-hyper = { version = "0.0.15" }

# logging
crossbeam-channel = { version = "0.5.13", optional = true }
