[package]
name = "doh-auth-relay-lib"
version = "0.1.0"
description = "Relay libraly for (Mutualized) Oblivious DNS over HTTPS with Authorization"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/doh-auth-relay"
repository = "https://github.com/junkurihara/doh-auth-relay"
license = "MIT"
readme = "../README.md"
categories = [
  "asynchronous",
  "network-programming",
  "command-line-utilities",
  "web-programming::http-server",
]
keywords = [
  "dns",
  "https",
  "dns-over-https",
  "doh",
  "oblivious-dns-over-https",
  "odoh",
  "mutualized-oblivious-dns",
  "mutualized-odoh",
  "modoh",
  "relay",
  "authorization",
]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.29", default-features = false, features = [
  "std",
  "async-await",
] }
tokio = { version = "1.34.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
anyhow = "1.0.75"
tracing = "0.1.40"
thiserror = "1.0.50"
async-trait = "0.1.74"

# http handling
url = "2.4.1"
rustc-hash = "1.1.0"
hyper = { version = "1.0.0", default-features = false, features = [
  "server",
  "http1",
  "http2",
  "stream",
] }
hyper-rustls = { version = "0.24.2", default-features = false, features = [
  "tokio-runtime",
  "webpki-tokio",
  "http1",
  "http2",
] }
tokio-rustls = { version = "0.24.1", features = ["early-data"] }

# validation of id token
reqwest = { version = "0.11.22", features = ["json", "default"] }
serde = { version = "1.0.192", default-features = false }
auth-validator = { git = "https://github.com/junkurihara/rust-token-server", package = "rust-token-server-validator", branch = "develop" }
